--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "flowbite": "^2.5.2",
+    "typed.js": "^2.1.0",
+    "typewriter-effect": "^2.21.0",
     "vue": "^3.5.12"
   },
   "devDependencies": {
